# UnifiedHouseSystem

./: .gitignore  README.md
core/: __init__.py  config.py  event_bus.py  module_base.py  registry.py
docs/: architecture.md  hardware_setup.md
ruview/dashboard/: index.html
ruview/dashboard/css/: style.css
ruview/dashboard/js/: app.js  room_map.js  ws.js
ruview/firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
ruview/firmware/main/: CMakeLists.txt  Kconfig.projbuild  config.h  csi_capture.c  csi_capture.h  feature_extract.c  feature_extract.h  main.c  mqtt_publish.c  mqtt_publish.h  ota.c  ota.h
ruview/firmware/tools/: flash_node.sh
ruview/firmware_arduino/ir_node/: config.h  ir_node.ino
ruview/firmware_arduino/led_node/: config.h  led_node.ino
ruview/firmware_arduino/ruview_node/: config.h  ruview_node.ino
ruview/hub/: config.yaml  requirements.txt  setup_pi.sh
ruview/hub/src/: __init__.py  ir_proxy.py  main.py
ruview/hub/src/api/: __init__.py  websocket.py
ruview/hub/src/api/v1/: ir.py  led.py  nodes.py  pose.py  presence.py  router.py  system.py  vitals.py
ruview/hub/src/core/: __init__.py  config.py  logger.py  state.py
ruview/hub/src/mqtt/: __init__.py  client.py  topics.py
ruview/hub/src/pipeline/: __init__.py  fusion.py  runner.py  ruvector.py  vitals.py
ruview/hub/src/storage/: db.py
ruview/hub/systemd/: mosquitto.conf  ruview.service
ruview/scripts/: calibrate.py  collect_training_data.py  train_model.py  train_on_pc.py
